# txh_knowledge

./: README.md  tips.md  txh.md
01_Subjects/01_C_language/: README.md
01_Subjects/02_C++_language/: README.md
01_Subjects/02_C++_language/cmake_prototype/: CMakeLists.txt
01_Subjects/02_C++_language/cmake_prototype/lib/: CMakeLists.txt
01_Subjects/02_C++_language/openmp/: 01_openmp.cpp  CMakeLists.txt
01_Subjects/05_Data_struct_and_algorithm/: README.md
01_Subjects/06_Design_pattern/: README.md
01_Subjects/06_Design_pattern/01_设计模式/: note.md
05_Tools/: vscode.md
05_Tools/01_valgrind/: 01_uninit_ptr.cpp  02_use_free_memory.cpp  03_overrun_memory.cpp  04_memory_leak.cpp  05_mismacth.cpp  CMakeLists.txt  README.md  launch.sh
06_some/: README.md  people.md
